--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "nyc": "^17.1.0"
   },
   "dependencies": {
-    "glob": "^11.0.1"
+    "@aws-sdk/client-s3": "^3.750.0",
+    "glob": "^11.0.1",
+    "tar": "^7.4.3"
   }
 }
