feat: support ignore files and oss put stream

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@ src/**/*.js
 build/
 coverage/
 test/fixtures/simple-file/storage/
-test/fixtures/**/package.secret.json
+test/fixtures/**/big-file.*
+test/package.secret.json
 
 # Logs
 logs
