--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@epiijs/deploy",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "description": "A toolkit for deploying any packages anywhere.",
   "engines": {
     "node": ">=20.0.0"
@@ -34,16 +34,15 @@
   },
   "homepage": "https://github.com/epiijs/deploy#readme",
   "devDependencies": {
-    "@epiijs/eslint-config": "^1.0.1",
-    "@types/ali-oss": "^6.16.11",
+    "@epiijs/eslint-config": "^1.0.2",
+    "@types/ali-oss": "^6.16.13",
     "@types/node": "^20.11.16",
-    "eslint": "^9.20.1",
-    "mocha": "^11.1.0"
+    "eslint": "^9.20.1"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.750.0",
-    "ali-oss": "^6.22.0",
-    "glob": "^11.0.1",
-    "tar": "^7.4.3"
+    "@aws-sdk/client-s3": "^3.940.0",
+    "ali-oss": "^6.23.0",
+    "glob": "^11.1.0",
+    "tar": "^7.5.2"
   }
 }
